# CIfly

./: .gitignore  LICENSE  README.md
.github/workflows/: CI.yml  R-CMD-check.yaml
cifly/: CHANGELOG.md  Cargo.toml  README.md
cifly/src/: array_nd.rs  expression.rs  instance.rs  lib.rs  reach.rs  ruletable.rs
cifly/tests/: integration_test.rs
ciflyR/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
ciflyR/man/: reach.Rd  (+3 more)
ciflypy/: Cargo.toml  README.md  pyproject.toml
ciflyr/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md
examples/: README.md
examples/ciflypy-examples/: README.md  pyproject.toml
examples/ciflypy-examples/ciflypy_examples/: cpdag_adjustment_check.py  frontdoor.py  min_dsep.py  nearest_dsep.py  optimal_adjustment.py  optimal_iv.py  parent_aid.py  sound_and_complete_iv.py  utils.py
examples/ciflypy-examples/tests/: test_cpdag_adjustment_check.py  test_frontdoor.py  test_min_dsep.py  test_nearest_dsep.py  test_optimal_adjustment.py  test_optimal_iv.py  test_parent_aid.py  test_sound_and_complete_iv.py
ruletables/: README.md  ancestors_admg.txt  backdoor_connected_cpdag.txt  backdoor_connected_dag.txt  closure_admg.txt  dconnected_admg.txt  descendants_admg.txt  forbidden_path_connected_cpdag.txt  frontdoor_forbidden_dag.txt  intercepted_paths_dag.txt  non_causal_connected_cpdag.txt  not_amenable_cpdag.txt  optimal_iv_admg.txt  parents_cpdag.txt  possible_ancestors_cpdag.txt  possible_descendants_cpdag.txt
website/: astro.config.mjs  package-lock.json  package.json
(+136 files in other folders)
